# password-manager

./: .gitignore  CMakeLists.txt  README.md  main.c
libs/: command.h  constants.h  file.c  file.h  parser.c  parser.h
